Add incremental Parquet update feature
- Added parse_incremental_parquet() for differential updates
- S02 now supports MODE='incremental' (default) or 'full'
- LIMIT_PER_YEAR=None for full data in production
- Skips already-processed race_ids automatically

--- a/notebooks/sagemaker/S02_feature_engineering.ipynb
+++ b/notebooks/sagemaker/S02_feature_engineering.ipynb
@@ -25,7 +25,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "!pip install pyarrow -q"
+                "%pip install pyarrow -q"
             ]
         },
         {
@@ -63,7 +63,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "from scraper.parser import parse_multiple_html_full\n",
+                "from scraper.parser import parse_multiple_html_full, parse_incremental_parquet\n",
                 "print(\"✅ モジュール読み込み完了\")"
             ]
         },
@@ -74,8 +74,12 @@
                 "---\n",
                 "## 2. パース設定\n",
                 "\n",
-                "**開発中**: 各年100件ずつで確認  \n",
-                "**本番**: `LIMIT_PER_YEAR = None` で全件処理"
+                "- **MODE = 'incremental'**: 新規HTMLのみパース（推奨）\n",
+                "- **MODE = 'full'**: 全件再パース\n",
+                "\n",
+                "### limit_per_year\n",
+                "- **開発中**: 100（各年100件）\n",
+                "- **本番**: None（全件処理）"
             ]
         },
         {
@@ -86,13 +90,20 @@
             "source": [
                 "# ========== 設定 ==========\n",
                 "\n",
-                "# 開発モード: 各年100件に制限\n",
-                "LIMIT_PER_YEAR = 100\n",
+                "# パースモード\n",
+                "MODE = 'incremental'  # 'incremental' or 'full'\n",
                 "\n",
-                "# 本番モード: 全件処理\n",
-                "# LIMIT_PER_YEAR = None\n",
+                "# 件数制限（Noneで無制限）\n",
+                "LIMIT_PER_YEAR = None  # 開発時: 100, 本番: None\n",
                 "\n",
-                "print(f\"処理モード: {'開発（各年' + str(LIMIT_PER_YEAR) + '件）' if LIMIT_PER_YEAR else '本番（全件）'}\")"
+                "print(f\"モード: {MODE}\")\n",
+                "print(f\"制限: {LIMIT_PER_YEAR if LIMIT_PER_YEAR else '無制限'}\")\n",
+                "\n",
+                "if RACES_PARQUET.exists():\n",
+                "    existing = pd.read_parquet(RACES_PARQUET)\n",
+                "    print(f\"既存データ: {len(existing):,} レース\")\n",
+                "else:\n",
+                "    print(\"既存データ: なし（初回実行）\")"
             ]
         },
         {
@@ -111,51 +122,41 @@
             "source": [
                 "def progress_callback(processed, total, skipped=0):\n",
                 "    pct = processed / total * 100 if total > 0 else 0\n",
-                "    print(f\"\\r進捗: {processed:,}/{total:,} ({pct:.1f}%)\", end='')\n",
+                "    print(f\"\\r進捗: {processed:,}/{total:,} ({pct:.1f}%) スキップ: {skipped:,}\", end='')\n",
                 "\n",
-                "print(\"📊 HTMLパースを開始...\")\n",
-                "if LIMIT_PER_YEAR:\n",
-                "    print(f\"   ⚠️ 開発モード: 各年 {LIMIT_PER_YEAR} 件まで\")\n",
-                "\n",
-                "race_list, horse_list = parse_multiple_html_full(\n",
-                "    HTML_DIR,\n",
-                "    years=None,\n",
-                "    progress_callback=progress_callback,\n",
-                "    limit_per_year=LIMIT_PER_YEAR\n",
-                ")\n",
-                "\n",
-                "print(f\"\\n\\n✅ パース完了\")\n",
-                "print(f\"   レース数: {len(race_list):,}\")\n",
-                "print(f\"   出走馬データ数: {len(horse_list):,}\")"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# DataFrameに変換\n",
-                "races_df = pd.DataFrame(race_list)\n",
-                "results_df = pd.DataFrame(horse_list)\n",
-                "\n",
-                "print(f\"races_df: {races_df.shape}\")\n",
-                "print(f\"results_df: {results_df.shape}\")"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Parquet形式で保存\n",
-                "races_df.to_parquet(RACES_PARQUET, index=False, compression='snappy')\n",
-                "results_df.to_parquet(RESULTS_PARQUET, index=False, compression='snappy')\n",
-                "\n",
-                "print(\"✅ Parquet保存完了\")\n",
-                "print(f\"   races.parquet: {RACES_PARQUET.stat().st_size / 1024 / 1024:.2f} MB\")\n",
-                "print(f\"   results.parquet: {RESULTS_PARQUET.stat().st_size / 1024 / 1024:.2f} MB\")"
+                "if MODE == 'incremental':\n",
+                "    # 差分更新モード\n",
+                "    print(\"📊 差分更新モード: 新規HTMLのみパース\")\n",
+                "    new_races, new_horses = parse_incremental_parquet(\n",
+                "        HTML_DIR,\n",
+                "        RACES_PARQUET,\n",
+                "        RESULTS_PARQUET,\n",
+                "        years=None,\n",
+                "        limit_per_year=LIMIT_PER_YEAR,\n",
+                "        progress_callback=progress_callback\n",
+                "    )\n",
+                "else:\n",
+                "    # 全件再パース\n",
+                "    print(\"📊 全件再パースモード\")\n",
+                "    if LIMIT_PER_YEAR:\n",
+                "        print(f\"   ⚠️ 開発モード: 各年 {LIMIT_PER_YEAR} 件まで\")\n",
+                "    \n",
+                "    race_list, horse_list = parse_multiple_html_full(\n",
+                "        HTML_DIR,\n",
+                "        years=None,\n",
+                "        progress_callback=progress_callback,\n",
+                "        limit_per_year=LIMIT_PER_YEAR\n",
+                "    )\n",
+                "    \n",
+                "    races_df = pd.DataFrame(race_list)\n",
+                "    results_df = pd.DataFrame(horse_list)\n",
+                "    \n",
+                "    races_df.to_parquet(RACES_PARQUET, index=False, compression='snappy')\n",
+                "    results_df.to_parquet(RESULTS_PARQUET, index=False, compression='snappy')\n",
+                "    \n",
+                "    print(f\"\\n\\n✅ パース完了\")\n",
+                "    print(f\"   レース数: {len(race_list):,}\")\n",
+                "    print(f\"   出走馬データ数: {len(horse_list):,}\")"
             ]
         },
         {
@@ -172,9 +173,15 @@
             "metadata": {},
             "outputs": [],
             "source": [
+                "races_df = pd.read_parquet(RACES_PARQUET)\n",
+                "results_df = pd.read_parquet(RESULTS_PARQUET)\n",
+                "\n",
                 "print(\"=== データ統計 ===\")\n",
                 "print(f\"レース数: {len(races_df):,}\")\n",
                 "print(f\"出走馬データ数: {len(results_df):,}\")\n",
+                "print(f\"\\nファイルサイズ:\")\n",
+                "print(f\"  races.parquet: {RACES_PARQUET.stat().st_size / 1024 / 1024:.2f} MB\")\n",
+                "print(f\"  results.parquet: {RESULTS_PARQUET.stat().st_size / 1024 / 1024:.2f} MB\")\n",
                 "\n",
                 "if 'year' in races_df.columns:\n",
                 "    print(\"\\n=== 年別レース数 ===\")\n",
@@ -206,9 +213,7 @@
             "metadata": {},
             "source": [
                 "---\n",
-                "## 5. GitHubにプッシュ\n",
-                "\n",
-                "Parquetファイルをコミット・プッシュしてオンラインからアクセス可能にする"
+                "## 5. GitHubにプッシュ"
             ]
         },
         {
@@ -222,53 +227,32 @@
                 "\n",
                 "os.chdir(PROJECT_ROOT)\n",
                 "\n",
-                "# Git操作\n",
                 "print(\"📤 GitHubにプッシュ中...\")\n",
                 "\n",
                 "try:\n",
-                "    # Parquetファイルを追加\n",
                 "    subprocess.run(['git', 'add', 'data/processed/races.parquet', 'data/processed/results.parquet'], check=True)\n",
                 "    \n",
-                "    # コミット\n",
                 "    result = subprocess.run(\n",
                 "        ['git', 'commit', '-m', 'Update race data parquet files'],\n",
                 "        capture_output=True, text=True\n",
                 "    )\n",
                 "    if result.returncode == 0:\n",
                 "        print(\"✅ コミット完了\")\n",
-                "    elif 'nothing to commit' in result.stdout or 'nothing to commit' in result.stderr:\n",
-                "        print(\"ℹ️ 変更なし（コミット不要）\")\n",
+                "    elif 'nothing to commit' in result.stdout + result.stderr:\n",
+                "        print(\"ℹ️ 変更なし\")\n",
                 "    else:\n",
-                "        print(f\"コミット結果: {result.stderr}\")\n",
+                "        print(f\"コミット: {result.stderr}\")\n",
                 "    \n",
-                "    # プッシュ\n",
                 "    result = subprocess.run(['git', 'push'], capture_output=True, text=True)\n",
                 "    if result.returncode == 0:\n",
                 "        print(\"✅ プッシュ完了!\")\n",
-                "        print(\"\\n🌐 オンラインからアクセス可能:\")\n",
-                "        print(\"   https://raw.githubusercontent.com/iinumac/keiba_prediction/main/data/processed/races.parquet\")\n",
-                "        print(\"   https://raw.githubusercontent.com/iinumac/keiba_prediction/main/data/processed/results.parquet\")\n",
+                "        print(\"\\n🌐 オンラインURL:\")\n",
+                "        print(\"https://raw.githubusercontent.com/iinumac/keiba_prediction/main/data/processed/races.parquet\")\n",
                 "    else:\n",
-                "        print(f\"プッシュ結果: {result.stderr}\")\n",
+                "        print(f\"プッシュ: {result.stderr}\")\n",
                 "        \n",
                 "except Exception as e:\n",
                 "    print(f\"❌ エラー: {e}\")"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "---\n",
-                "## 6. オンラインからの読み込み確認\n",
-                "\n",
-                "```python\n",
-                "import pandas as pd\n",
-                "\n",
-                "BASE = \"https://raw.githubusercontent.com/iinumac/keiba_prediction/main/data/processed\"\n",
-                "races_df = pd.read_parquet(f\"{BASE}/races.parquet\")\n",
-                "results_df = pd.read_parquet(f\"{BASE}/results.parquet\")\n",
-                "```"
             ]
         }
     ],
