Add previous race features and surface-specific stats
New features:
- prev_finish, prev_last_3f, days_since_last, is_debut
- horse_芝_place_rate, horse_ダート_place_rate
- horse_avg_last_3f, surface_match
- Sanrenpuku (trifecta) hit rate simulation

--- a/notebooks/local/L01_model_training.ipynb
+++ b/notebooks/local/L01_model_training.ipynb
@@ -6,9 +6,9 @@
             "source": [
                 "# L01: 競馬予想モデル学習\n",
                 "\n",
-                "2種類のLightGBMモデルを構築・比較：\n",
-                "1. **オッズなしモデル**: 純粋な予測能力（レース前情報のみ）\n",
-                "2. **オッズありモデル**: 速報オッズを含む（穴馬発見用）\n",
+                "## モデル比較\n",
+                "1. **オッズなしモデル**: 純粋な予測（レース前情報のみ）\n",
+                "2. **オッズありモデル**: 速報オッズ込み\n",
                 "\n",
                 "**実行環境**: ローカル（M4 MacBook Air）"
             ]
@@ -63,7 +63,7 @@
             "metadata": {},
             "source": [
                 "---\n",
-                "## 2. データ分割\n",
+                "## 2. データ前処理・分割\n",
                 "\n",
                 "- **Train**: 2010〜2024年\n",
                 "- **Test**: 2025年〜"
@@ -77,6 +77,9 @@
             "source": [
                 "results_df['race_date'] = pd.to_datetime(results_df['race_date'])\n",
                 "results_df['year'] = results_df['race_date'].dt.year\n",
+                "\n",
+                "# 完走馬のみ\n",
+                "results_df = results_df[results_df['is_finished'] == True].copy()\n",
                 "\n",
                 "TRAIN_END_YEAR = 2024\n",
                 "\n",
@@ -92,7 +95,41 @@
             "metadata": {},
             "source": [
                 "---\n",
-                "## 3. 特徴量エンジニアリング"
+                "## 3. 特徴量エンジニアリング\n",
+                "\n",
+                "### 追加特徴量\n",
+                "- 前走着順、前走上がり3F、前走からの間隔日数\n",
+                "- 距離別・芝ダート別の過去成績"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "def add_previous_race_features(df):\n",
+                "    \"\"\"\n",
+                "    前走情報を特徴量として追加\n",
+                "    \"\"\"\n",
+                "    df = df.sort_values(['horse_id', 'race_date']).copy()\n",
+                "    \n",
+                "    # 前走の情報をシフトで取得（同じ馬のみ）\n",
+                "    df['prev_finish'] = df.groupby('horse_id')['finish_position'].shift(1)\n",
+                "    df['prev_last_3f'] = df.groupby('horse_id')['last_3f'].shift(1)\n",
+                "    df['prev_race_date'] = df.groupby('horse_id')['race_date'].shift(1)\n",
+                "    \n",
+                "    # 前走からの間隔日数\n",
+                "    df['days_since_last'] = (df['race_date'] - df['prev_race_date']).dt.days\n",
+                "    \n",
+                "    # 前走がなければ新馬扱い\n",
+                "    df['is_debut'] = df['prev_finish'].isna().astype(int)\n",
+                "    \n",
+                "    return df\n",
+                "\n",
+                "print(\"前走情報を追加中...\")\n",
+                "results_with_prev = add_previous_race_features(results_df)\n",
+                "print(f\"完了: {len(results_with_prev):,} 行\")"
             ]
         },
         {
@@ -108,17 +145,28 @@
                 "    # 馬ごとの過去成績\n",
                 "    horse_stats = history_df.groupby('horse_id').agg({\n",
                 "        'finish_position': ['count', 'mean'],\n",
-                "        'race_id': 'count'\n",
                 "    }).reset_index()\n",
-                "    horse_stats.columns = ['horse_id', 'horse_race_count', 'horse_avg_finish', 'horse_total_races']\n",
+                "    horse_stats.columns = ['horse_id', 'horse_race_count', 'horse_avg_finish']\n",
                 "    \n",
                 "    win_stats = history_df.groupby('horse_id').apply(\n",
                 "        lambda x: pd.Series({\n",
                 "            'horse_win_rate': (x['finish_position'] == 1).sum() / len(x) if len(x) > 0 else 0,\n",
                 "            'horse_place_rate': (x['finish_position'] <= 3).sum() / len(x) if len(x) > 0 else 0,\n",
+                "            'horse_avg_last_3f': x['last_3f'].mean(),\n",
                 "        })\n",
                 "    ).reset_index()\n",
                 "    horse_stats = horse_stats.merge(win_stats, on='horse_id', how='left')\n",
+                "    \n",
+                "    # 芝・ダート別成績\n",
+                "    for surface_type in ['芝', 'ダート']:\n",
+                "        surface_hist = history_df[history_df['surface'] == surface_type]\n",
+                "        surface_stats = surface_hist.groupby('horse_id').apply(\n",
+                "            lambda x: pd.Series({\n",
+                "                f'horse_{surface_type}_count': len(x),\n",
+                "                f'horse_{surface_type}_place_rate': (x['finish_position'] <= 3).sum() / len(x) if len(x) > 0 else 0,\n",
+                "            })\n",
+                "        ).reset_index()\n",
+                "        horse_stats = horse_stats.merge(surface_stats, on='horse_id', how='left')\n",
                 "    \n",
                 "    # 騎手の成績\n",
                 "    jockey_stats = history_df.groupby('jockey_id').apply(\n",
@@ -155,10 +203,14 @@
             "source": [
                 "print(\"特徴量を計算中...\")\n",
                 "\n",
-                "all_history = results_df[results_df['year'] <= TRAIN_END_YEAR].copy()\n",
+                "# 前走情報付きデータで分割\n",
+                "train_with_prev = results_with_prev[results_with_prev['year'] <= TRAIN_END_YEAR].copy()\n",
+                "test_with_prev = results_with_prev[results_with_prev['year'] > TRAIN_END_YEAR].copy()\n",
                 "\n",
-                "train_features = calculate_historical_features(train_df, all_history)\n",
-                "test_features = calculate_historical_features(test_df, all_history)\n",
+                "all_history = results_with_prev[results_with_prev['year'] <= TRAIN_END_YEAR].copy()\n",
+                "\n",
+                "train_features = calculate_historical_features(train_with_prev, all_history)\n",
+                "test_features = calculate_historical_features(test_with_prev, all_history)\n",
                 "\n",
                 "print(f\"Train features: {train_features.shape}\")\n",
                 "print(f\"Test features: {test_features.shape}\")"
@@ -170,14 +222,22 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "def add_features(df):\n",
+                "def add_final_features(df):\n",
                 "    df = df.copy()\n",
                 "    df['surface_encoded'] = df['surface'].map({'芝': 0, 'ダート': 1}).fillna(-1)\n",
                 "    df['target'] = (df['finish_position'] <= 3).astype(int)\n",
+                "    \n",
+                "    # コース適性（今回のコースでの複勝率）\n",
+                "    df['surface_match'] = np.where(\n",
+                "        df['surface'] == '芝',\n",
+                "        df['horse_芝_place_rate'],\n",
+                "        df['horse_ダート_place_rate']\n",
+                "    )\n",
+                "    \n",
                 "    return df\n",
                 "\n",
-                "train_features = add_features(train_features)\n",
-                "test_features = add_features(test_features)\n",
+                "train_features = add_final_features(train_features)\n",
+                "test_features = add_final_features(test_features)\n",
                 "\n",
                 "print(\"特徴量追加完了\")"
             ]
@@ -187,11 +247,7 @@
             "metadata": {},
             "source": [
                 "---\n",
-                "## 4. モデル定義\n",
-                "\n",
-                "### 特徴量の分類\n",
-                "- **レース前情報**: distance, surface, level_score, horse_number, gate_number, impost, 過去成績\n",
-                "- **レース直前情報**: popularity（人気）, odds（オッズ）"
+                "## 4. モデル定義"
             ]
         },
         {
@@ -202,27 +258,30 @@
             "source": [
                 "import lightgbm as lgb\n",
                 "from sklearn.model_selection import train_test_split\n",
-                "from sklearn.metrics import roc_auc_score, accuracy_score\n",
+                "from sklearn.metrics import roc_auc_score\n",
                 "\n",
                 "# オッズなしモデル（純粋予測）\n",
                 "FEATURE_COLS_NO_ODDS = [\n",
-                "    # レース情報（レース前に確定）\n",
+                "    # レース情報\n",
                 "    'distance', 'surface_encoded', 'level_score',\n",
                 "    'horse_number', 'gate_number', 'impost',\n",
+                "    # 前走情報\n",
+                "    'prev_finish', 'prev_last_3f', 'days_since_last', 'is_debut',\n",
                 "    # 馬の過去成績\n",
                 "    'horse_race_count', 'horse_avg_finish',\n",
                 "    'horse_win_rate', 'horse_place_rate',\n",
+                "    'horse_avg_last_3f', 'surface_match',\n",
                 "    # 騎手の成績\n",
                 "    'jockey_race_count', 'jockey_win_rate', 'jockey_place_rate',\n",
                 "    # 調教師の成績\n",
                 "    'trainer_race_count', 'trainer_win_rate', 'trainer_place_rate',\n",
                 "]\n",
                 "\n",
-                "# オッズありモデル（速報オッズ込み）\n",
+                "# オッズありモデル\n",
                 "FEATURE_COLS_WITH_ODDS = FEATURE_COLS_NO_ODDS + ['popularity', 'odds']\n",
                 "\n",
-                "print(\"オッズなしモデル特徴量:\", len(FEATURE_COLS_NO_ODDS))\n",
-                "print(\"オッズありモデル特徴量:\", len(FEATURE_COLS_WITH_ODDS))"
+                "print(\"オッズなしモデル特徴量:\", len(FEATURE_COLS_NO_ODDS), \"個\")\n",
+                "print(\"オッズありモデル特徴量:\", len(FEATURE_COLS_WITH_ODDS), \"個\")"
             ]
         },
         {
@@ -231,9 +290,14 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# データ準備\n",
-                "train_clean = train_features.dropna(subset=['target'] + FEATURE_COLS_WITH_ODDS)\n",
-                "test_clean = test_features.dropna(subset=['target'] + FEATURE_COLS_WITH_ODDS)\n",
+                "# データ準備（欠損値を埋める）\n",
+                "for col in FEATURE_COLS_WITH_ODDS:\n",
+                "    if col in train_features.columns:\n",
+                "        train_features[col] = train_features[col].fillna(0)\n",
+                "        test_features[col] = test_features[col].fillna(0)\n",
+                "\n",
+                "train_clean = train_features.dropna(subset=['target'])\n",
+                "test_clean = test_features.dropna(subset=['target'])\n",
                 "\n",
                 "print(f\"Train (clean): {len(train_clean):,}\")\n",
                 "print(f\"Test (clean): {len(test_clean):,}\")"
@@ -264,7 +328,6 @@
                 "    X_test = test_data[feature_cols]\n",
                 "    y_test = test_data['target']\n",
                 "    \n",
-                "    # Validation split\n",
                 "    X_tr, X_val, y_tr, y_val = train_test_split(\n",
                 "        X_train, y_train, test_size=0.2, random_state=42\n",
                 "    )\n",
@@ -287,46 +350,53 @@
                 "    model = lgb.train(\n",
                 "        params,\n",
                 "        train_ds,\n",
-                "        num_boost_round=500,\n",
+                "        num_boost_round=1000,\n",
                 "        valid_sets=[train_ds, val_ds],\n",
                 "        valid_names=['train', 'valid'],\n",
                 "        callbacks=[\n",
                 "            lgb.early_stopping(stopping_rounds=50),\n",
-                "            lgb.log_evaluation(period=0)  # 静音\n",
+                "            lgb.log_evaluation(period=0)\n",
                 "        ]\n",
                 "    )\n",
                 "    \n",
-                "    # 予測\n",
                 "    y_pred_proba = model.predict(X_test)\n",
-                "    \n",
-                "    # 評価\n",
                 "    auc = roc_auc_score(y_test, y_pred_proba)\n",
                 "    print(f\"\\n📊 Test AUC: {auc:.4f}\")\n",
                 "    \n",
-                "    # レースごとの的中率\n",
                 "    test_with_pred = test_data.copy()\n",
                 "    test_with_pred['pred_proba'] = y_pred_proba\n",
                 "    \n",
-                "    def calc_hit_rate(group, top_n=3):\n",
+                "    # 的中率（上位3頭の中に3着内馬がいる割合）\n",
+                "    def calc_hit(group, top_n=3):\n",
                 "        top_preds = group.nlargest(top_n, 'pred_proba')\n",
                 "        return (top_preds['finish_position'] <= 3).any()\n",
                 "    \n",
-                "    race_hit = test_with_pred.groupby('race_id').apply(calc_hit_rate)\n",
+                "    race_hit = test_with_pred.groupby('race_id').apply(calc_hit)\n",
                 "    hit_rate = race_hit.mean()\n",
                 "    print(f\"🎯 上位3頭予測の的中率: {hit_rate:.1%}\")\n",
                 "    \n",
-                "    # 回収率シミュレーション\n",
-                "    def simulate_returns(group):\n",
+                "    # 単勝回収率\n",
+                "    def sim_returns(group):\n",
                 "        top = group.nlargest(1, 'pred_proba').iloc[0]\n",
                 "        return top['odds'] * 100 if top['finish_position'] == 1 else 0\n",
                 "    \n",
-                "    returns = test_with_pred.groupby('race_id').apply(simulate_returns)\n",
-                "    total_bet = len(returns) * 100\n",
-                "    total_return = returns.sum()\n",
-                "    return_rate = total_return / total_bet * 100\n",
+                "    returns = test_with_pred.groupby('race_id').apply(sim_returns)\n",
+                "    return_rate = returns.sum() / (len(returns) * 100) * 100\n",
                 "    print(f\"💰 単勝回収率: {return_rate:.1f}%\")\n",
                 "    \n",
-                "    # 特徴量重要度\n",
+                "    # 三連複的中率シミュレーション（上位5頭から3頭を選ぶ）\n",
+                "    def calc_sanrenpuku_hit(group):\n",
+                "        top5 = group.nlargest(5, 'pred_proba')\n",
+                "        actual_top3 = group.nsmallest(3, 'finish_position')['horse_id'].values\n",
+                "        pred_top5_ids = top5['horse_id'].values\n",
+                "        # 実際の3着内馬のうち、予測上位5頭に何頭含まれるか\n",
+                "        matches = len(set(actual_top3) & set(pred_top5_ids))\n",
+                "        return matches >= 3  # 3頭全て含まれていれば的中\n",
+                "    \n",
+                "    sanren_hit = test_with_pred.groupby('race_id').apply(calc_sanrenpuku_hit)\n",
+                "    sanren_rate = sanren_hit.mean()\n",
+                "    print(f\"🏇 三連複的中率（上位5頭選択）: {sanren_rate:.1%}\")\n",
+                "    \n",
                 "    importance = pd.DataFrame({\n",
                 "        'feature': feature_cols,\n",
                 "        'importance': model.feature_importance()\n",
@@ -337,6 +407,7 @@
                 "        'auc': auc,\n",
                 "        'hit_rate': hit_rate,\n",
                 "        'return_rate': return_rate,\n",
+                "        'sanren_rate': sanren_rate,\n",
                 "        'importance': importance,\n",
                 "        'predictions': test_with_pred\n",
                 "    }"
@@ -348,7 +419,6 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# オッズなしモデル\n",
                 "result_no_odds = train_and_evaluate(\n",
                 "    train_clean, test_clean,\n",
                 "    FEATURE_COLS_NO_ODDS,\n",
@@ -362,7 +432,6 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# オッズありモデル\n",
                 "result_with_odds = train_and_evaluate(\n",
                 "    train_clean, test_clean,\n",
                 "    FEATURE_COLS_WITH_ODDS,\n",
@@ -389,15 +458,17 @@
                 "print(\"=\"*60)\n",
                 "\n",
                 "comparison = pd.DataFrame({\n",
-                "    '指標': ['AUC', '的中率（上位3頭→3着内）', '単勝回収率'],\n",
+                "    '指標': ['AUC', '上位3頭的中率', '三連複的中率（5頭選択）', '単勝回収率'],\n",
                 "    'オッズなし': [\n",
                 "        f\"{result_no_odds['auc']:.4f}\",\n",
                 "        f\"{result_no_odds['hit_rate']:.1%}\",\n",
+                "        f\"{result_no_odds['sanren_rate']:.1%}\",\n",
                 "        f\"{result_no_odds['return_rate']:.1f}%\"\n",
                 "    ],\n",
                 "    'オッズあり': [\n",
                 "        f\"{result_with_odds['auc']:.4f}\",\n",
                 "        f\"{result_with_odds['hit_rate']:.1%}\",\n",
+                "        f\"{result_with_odds['sanren_rate']:.1%}\",\n",
                 "        f\"{result_with_odds['return_rate']:.1f}%\"\n",
                 "    ]\n",
                 "})\n",
@@ -411,7 +482,6 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# 特徴量重要度の比較\n",
                 "import matplotlib.pyplot as plt\n",
                 "\n",
                 "fig, axes = plt.subplots(1, 2, figsize=(14, 6))\n",
@@ -420,10 +490,10 @@
                 "    ('オッズなしモデル', result_no_odds),\n",
                 "    ('オッズありモデル', result_with_odds)\n",
                 "]):\n",
-                "    imp = result['importance'].head(10)\n",
+                "    imp = result['importance'].head(12)\n",
                 "    ax.barh(imp['feature'], imp['importance'])\n",
                 "    ax.set_xlabel('Importance')\n",
-                "    ax.set_title(f'{name}\\nTop 10 Features')\n",
+                "    ax.set_title(f'{name}\\nTop 12 Features')\n",
                 "    ax.invert_yaxis()\n",
                 "\n",
                 "plt.tight_layout()\n",
@@ -446,15 +516,12 @@
             "source": [
                 "import pickle\n",
                 "\n",
-                "# オッズなしモデル\n",
                 "with open(MODEL_DIR / 'model_no_odds.pkl', 'wb') as f:\n",
                 "    pickle.dump(result_no_odds['model'], f)\n",
                 "\n",
-                "# オッズありモデル\n",
                 "with open(MODEL_DIR / 'model_with_odds.pkl', 'wb') as f:\n",
                 "    pickle.dump(result_with_odds['model'], f)\n",
                 "\n",
-                "# 設定\n",
                 "config = {\n",
                 "    'feature_cols_no_odds': FEATURE_COLS_NO_ODDS,\n",
                 "    'feature_cols_with_odds': FEATURE_COLS_WITH_ODDS,\n",
